--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1+Code:wght@100;200;500&display=swap');
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue','M PLUS 1 Code', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +12,123 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container {
+  max-width: 960px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  height: 100vh;
+}
+
+.notes-lst {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+}
+
+.single-note.new {
+  background: rgba(151, 204, 156);
+}
+
+textarea {
+  
+  background: rgba(151, 204, 156);
+  border: none;
+  resize: none;
+}
+
+textarea:focus{
+  outline: none;
+  
+}
+
+.save {
+  background-color: rgba(71, 67, 67, 0.384);
+  border: none;
+  border-radius: 15px;
+  padding: 5px 10px 5px 10px;
+  transition: background-color 0.4s;
+  cursor: pointer;
+}
+
+.save:hover{
+  background-color: rgb(71, 67, 67);
+}
+
+.single-note {
+  background-color: rgb(233, 233, 109);
+  border-radius: 10px;
+  padding: 1rem;
+  min-height: 140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  white-space: pre-wrap;
+
+}
+
+.note-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.delete-icon {
+  transition: color 0.5s;
+}
+.delete-icon:hover {
+  cursor: pointer;
+  color: green;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  background-color: rgb(187, 187, 187);
+  border-radius: 10px;
+  padding: 5px;
+  margin-bottom: 1.5rem;
+  margin-top: 1rem; 
+}
+
+.search input {
+  border:none;
+  background-color: rgb(187, 187, 187);
+  width: 100vh;
+  height: 1.5rem;
+  font-size: 1rem;
+
+}
+.search input:focus{
+  outline: none;
+  color: black;
+}
+
+.header {
+  font-family: 'M PLUS 1 Code';
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.dark-mode {
+  background-color: rgb(29, 29, 29);
+}
+.dark-mode h1{
+  color: white;
+}
+.dark-mode .save{
+  background-color: rgba(255, 228, 196, 0.288);
+  color: white;
+}
+.dark-mode .save:hover{
+  background-color: bisque;
+  color:black
+}
+
+.dark-mode .search input:focus{
+  color:white;
 }
